product page updated

--- a/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
@@ -1,8 +1,27 @@
 .productCarousel{
     max-width: 40rem;
     margin: 2rem 0rem;
+    & img{
+        width: 20rem!important;
+    }
 }
 
 .productInfo{
     margin: 2rem 0rem;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 12px;
+    padding: 2rem;
+
+    & .productHeader{
+        margin-bottom: 2rem;
+    }
+    & .productBrand{
+        color: cornflowerblue;
+    }
+    & .productPrice{
+
+        & span{
+            color: crimson;
+        }
+    }
 }
