--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -1204,14 +1204,15 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" smartInsertDeleteType="yes"/>
                                             </textField>
-                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EBk-bu-MyN" userLabel="Add to list Stack View">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="EBk-bu-MyN" userLabel="Add to list Stack View">
                                                 <rect key="frame" x="153.66666666666669" y="4.6666666666666856" width="230.33333333333331" height="34"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wjE-Af-hBx" userLabel="Add to List Button">
-                                                        <rect key="frame" x="0.0" y="0.0" width="66" height="34"/>
+                                                    <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wjE-Af-hBx" userLabel="Add to List Button">
+                                                        <rect key="frame" x="0.0" y="0.0" width="83.666666666666671" height="34"/>
                                                         <color key="backgroundColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                                         <color key="tintColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                        <state key="normal" title=" Add to... ">
+                                                        <state key="normal" title="Add to...">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <userDefinedRuntimeAttributes>
@@ -1223,16 +1224,14 @@
                                                             <action selector="addToList:" destination="RgT-CZ-30c" eventType="touchUpInside" id="Drf-A6-D75"/>
                                                         </connections>
                                                     </button>
-                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Choose List" borderStyle="roundedRect" placeholder="Choose List" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zMn-wl-nYB" userLabel="List Picker Text Field">
-                                                        <rect key="frame" x="66.000000000000014" y="0.0" width="164.33333333333337" height="34"/>
-                                                        <color key="textColor" name="unemphasizedSelectedTextBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    <textField opaque="NO" contentMode="redraw" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Choose List" borderStyle="roundedRect" placeholder="Choose List" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Va7-JW-6fE" userLabel="List Picker Text Field">
+                                                        <rect key="frame" x="83.666666666666671" y="0.0" width="146.66666666666663" height="34"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="textColor" systemColor="scrollViewTexturedBackgroundColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" smartInsertDeleteType="yes"/>
                                                     </textField>
                                                 </subviews>
-                                                <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="zMn-wl-nYB" secondAttribute="trailing" id="3gR-vz-bmW"/>
-                                                </constraints>
                                             </stackView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1315,14 +1314,14 @@
                                 <rect key="frame" x="15" y="740.33333333333337" width="384" height="62.666666666666629"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tjo-Fu-Ob5" userLabel="Price Label">
-                                        <rect key="frame" x="0.0" y="21" width="113" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="21" width="133.66666666666666" height="20.333333333333329"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q5f-pZ-N2g" userLabel="Add to Cart Button">
-                                        <rect key="frame" x="133" y="12.333333333333258" width="251" height="37.666666666666664"/>
+                                        <rect key="frame" x="153.66666666666663" y="12.333333333333258" width="230.33333333333337" height="37.666666666666664"/>
                                         <color key="backgroundColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                         <state key="normal" title="Add to Cart">
@@ -1341,6 +1340,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="q5f-pZ-N2g" firstAttribute="height" secondItem="5GF-Kn-Fsr" secondAttribute="height" multiplier="0.6" id="Lai-O0-j4X"/>
+                                    <constraint firstItem="q5f-pZ-N2g" firstAttribute="width" secondItem="5GF-Kn-Fsr" secondAttribute="width" multiplier="0.6" id="Ppp-wf-OvY"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -1394,7 +1394,7 @@
                         <outlet property="amountPickerTextField" destination="lHU-hd-faC" id="HZZ-eW-TFM"/>
                         <outlet property="brandLabel" destination="8Jg-iQ-ADz" id="lWE-Yl-oth"/>
                         <outlet property="descriptionLabel" destination="7df-hZ-mQf" id="BPK-zl-6C1"/>
-                        <outlet property="listPickerTextField" destination="zMn-wl-nYB" id="uTK-yD-6Z8"/>
+                        <outlet property="listPickerTextField" destination="Va7-JW-6fE" id="aT8-7l-hkn"/>
                         <outlet property="listPickerView" destination="UX2-bT-MIJ" id="iQF-Qg-GUt"/>
                         <outlet property="pickerView" destination="pPq-08-BAz" id="pf3-h0-D2S"/>
                         <outlet property="priceLabel" destination="tjo-Fu-Ob5" id="juY-UA-lAN"/>
@@ -2623,6 +2623,9 @@
         </systemColor>
         <systemColor name="scrollViewTexturedBackgroundColor">
             <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="scrollViewTexturedBackgroundColor">
+            <color red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
