--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -2248,28 +2248,43 @@
                                             <action selector="backButtonPressed:" destination="L5V-jH-uVD" eventType="touchUpInside" id="pFA-1L-qlr"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zha-rl-GOD">
-                                        <rect key="frame" x="360" y="50" width="34" height="30"/>
-                                        <state key="normal" title="Save"/>
-                                        <connections>
-                                            <action selector="saveButtonPressed:" destination="L5V-jH-uVD" eventType="touchUpInside" id="oit-wW-7aj"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="1Re-5U-P7C" secondAttribute="bottom" constant="5" id="Cii-0y-cDT"/>
-                                    <constraint firstAttribute="trailing" secondItem="Zha-rl-GOD" secondAttribute="trailing" constant="20" id="JJB-Jt-EUt"/>
                                     <constraint firstItem="PHB-JM-Abb" firstAttribute="centerX" secondItem="SVq-wV-hiC" secondAttribute="centerX" id="LkK-Kg-qnb"/>
                                     <constraint firstAttribute="bottom" secondItem="PHB-JM-Abb" secondAttribute="bottom" constant="20" id="Vfe-b9-ava"/>
                                     <constraint firstAttribute="height" constant="100" id="fSg-Mi-M9d"/>
-                                    <constraint firstAttribute="bottom" secondItem="Zha-rl-GOD" secondAttribute="bottom" constant="20" id="klo-NG-9UP"/>
                                     <constraint firstItem="1Re-5U-P7C" firstAttribute="leading" secondItem="SVq-wV-hiC" secondAttribute="leading" constant="20" id="xAd-xK-JcI"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e3Y-4l-TEa">
-                                <rect key="frame" x="10" y="120.00000000000001" width="394" height="148.33333333333337"/>
+                                <rect key="frame" x="10" y="120.00000000000001" width="394" height="178.33333333333337"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zha-rl-GOD">
+                                        <rect key="frame" x="333" y="133.33333333333334" width="41" height="30"/>
+                                        <state key="normal" title=" Save "/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                                <integer key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <integer key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowOpacity">
+                                                <real key="value" value="0.29999999999999999"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowRadius">
+                                                <integer key="value" value="3"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="size" keyPath="layer.shadowOffset">
+                                                <size key="value" width="2" height="2"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="saveButtonPressed:" destination="L5V-jH-uVD" eventType="touchUpInside" id="oit-wW-7aj"/>
+                                        </connections>
+                                    </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2un-Fw-iWO">
                                         <rect key="frame" x="10" y="19.999999999999993" width="374" height="108.33333333333331"/>
                                         <subviews>
@@ -2351,8 +2366,10 @@
                                 <constraints>
                                     <constraint firstItem="2un-Fw-iWO" firstAttribute="top" secondItem="e3Y-4l-TEa" secondAttribute="top" constant="20" id="1Eb-fm-rua"/>
                                     <constraint firstItem="2un-Fw-iWO" firstAttribute="leading" secondItem="e3Y-4l-TEa" secondAttribute="leading" constant="10" id="Dds-c1-QzT"/>
-                                    <constraint firstAttribute="bottom" secondItem="2un-Fw-iWO" secondAttribute="bottom" constant="20" id="WK2-3o-FPB"/>
+                                    <constraint firstAttribute="bottom" secondItem="Zha-rl-GOD" secondAttribute="bottom" constant="15" id="N41-2m-yUG"/>
+                                    <constraint firstAttribute="bottom" secondItem="2un-Fw-iWO" secondAttribute="bottom" constant="50" id="WK2-3o-FPB"/>
                                     <constraint firstAttribute="trailing" secondItem="2un-Fw-iWO" secondAttribute="trailing" constant="10" id="dUa-ew-HSm"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zha-rl-GOD" secondAttribute="trailing" constant="20" id="sI3-y6-bS1"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -2373,7 +2390,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="icg-px-bPn" userLabel="Password">
-                                <rect key="frame" x="10" y="278.33333333333331" width="394" height="49.333333333333314"/>
+                                <rect key="frame" x="10" y="308.33333333333331" width="394" height="49.333333333333314"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock_icon" translatesAutoresizingMaskIntoConstraints="NO" id="5E3-TS-bua">
                                         <rect key="frame" x="10" y="5" width="39.333333333333336" height="39.333333333333336"/>
@@ -2425,7 +2442,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oMM-Ll-Lf6" userLabel="Logout">
-                                <rect key="frame" x="10" y="337.66666666666669" width="394" height="49.333333333333314"/>
+                                <rect key="frame" x="10" y="367.66666666666669" width="394" height="49.333333333333314"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exit_icon" translatesAutoresizingMaskIntoConstraints="NO" id="6cg-fg-gd2">
                                         <rect key="frame" x="15.000000000000004" y="5" width="39.333333333333343" height="39.333333333333336"/>
