--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -2389,49 +2389,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="icg-px-bPn" userLabel="Password">
-                                <rect key="frame" x="10" y="598.33333333333337" width="394" height="30"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password change" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1q5-L9-Bzy">
-                                        <rect key="frame" x="130" y="5" width="134" height="20.333333333333332"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="1" green="0.62352941179999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="372-cA-ouX">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="30"/>
-                                        <connections>
-                                            <action selector="resetPasswordButtonPressed:" destination="L5V-jH-uVD" eventType="touchUpInside" id="bH8-R6-sce"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstItem="1q5-L9-Bzy" firstAttribute="centerX" secondItem="icg-px-bPn" secondAttribute="centerX" id="1Ow-kY-gFw"/>
-                                    <constraint firstItem="372-cA-ouX" firstAttribute="leading" secondItem="icg-px-bPn" secondAttribute="leading" id="3QG-Ln-rkU"/>
-                                    <constraint firstItem="1q5-L9-Bzy" firstAttribute="centerY" secondItem="icg-px-bPn" secondAttribute="centerY" id="9BF-4F-oTm"/>
-                                    <constraint firstAttribute="bottom" secondItem="372-cA-ouX" secondAttribute="bottom" id="E8i-tR-e1w"/>
-                                    <constraint firstItem="372-cA-ouX" firstAttribute="top" secondItem="icg-px-bPn" secondAttribute="top" id="Jbp-In-JP3"/>
-                                    <constraint firstAttribute="trailing" secondItem="372-cA-ouX" secondAttribute="trailing" id="iiu-OD-U69"/>
-                                    <constraint firstItem="1q5-L9-Bzy" firstAttribute="centerY" secondItem="icg-px-bPn" secondAttribute="centerY" id="ql3-hK-fiB"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <integer key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowOpacity">
-                                        <real key="value" value="0.40000000000000002"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowRadius">
-                                        <integer key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="size" keyPath="layer.shadowOffset">
-                                        <size key="value" width="3" height="3"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oMM-Ll-Lf6" userLabel="Logout">
-                                <rect key="frame" x="10" y="638.33333333333337" width="394" height="49.333333333333371"/>
+                                <rect key="frame" x="10" y="550.33333333333337" width="394" height="49.333333333333371"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exit_icon" translatesAutoresizingMaskIntoConstraints="NO" id="6cg-fg-gd2">
                                         <rect key="frame" x="15.000000000000004" y="5" width="39.333333333333343" height="39.333333333333336"/>
@@ -2449,7 +2408,6 @@
                                         <rect key="frame" x="0.0" y="0.0" width="394" height="49.333333333333336"/>
                                         <connections>
                                             <action selector="logoutButtonPressed:" destination="L5V-jH-uVD" eventType="touchUpInside" id="k9Y-u0-Gr6"/>
-                                            <action selector="resetPasswordButtonPressed:" destination="L5V-jH-uVD" eventType="touchUpInside" id="7uX-2x-zil"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -2624,7 +2582,6 @@
                         <viewLayoutGuide key="safeArea" id="2XP-EK-fK7"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstItem="oMM-Ll-Lf6" firstAttribute="top" secondItem="icg-px-bPn" secondAttribute="bottom" constant="10" id="0NY-B3-3Lv"/>
                             <constraint firstItem="yfp-i0-eMP" firstAttribute="leading" secondItem="2XP-EK-fK7" secondAttribute="leading" constant="10" id="49C-jp-B5l"/>
                             <constraint firstItem="2XP-EK-fK7" firstAttribute="trailing" secondItem="e3Y-4l-TEa" secondAttribute="trailing" constant="10" id="EIE-Nr-qod"/>
                             <constraint firstItem="e3Y-4l-TEa" firstAttribute="leading" secondItem="2XP-EK-fK7" secondAttribute="leading" constant="10" id="Oen-1u-Hxo"/>
@@ -2632,13 +2589,11 @@
                             <constraint firstItem="SVq-wV-hiC" firstAttribute="top" secondItem="2xE-Qj-iDB" secondAttribute="top" id="W88-Bg-20q"/>
                             <constraint firstItem="e3Y-4l-TEa" firstAttribute="top" secondItem="SVq-wV-hiC" secondAttribute="bottom" constant="20" id="WO9-Qm-2hV"/>
                             <constraint firstItem="oMM-Ll-Lf6" firstAttribute="leading" secondItem="2xE-Qj-iDB" secondAttribute="leading" constant="10" id="YGH-I6-pT6"/>
-                            <constraint firstItem="icg-px-bPn" firstAttribute="leading" secondItem="2xE-Qj-iDB" secondAttribute="leading" constant="10" id="bAi-tI-hnH"/>
                             <constraint firstAttribute="trailing" secondItem="yfp-i0-eMP" secondAttribute="trailing" constant="10" id="fCh-Qa-Etn"/>
                             <constraint firstItem="2XP-EK-fK7" firstAttribute="trailing" secondItem="SVq-wV-hiC" secondAttribute="trailing" id="i1a-QQ-itc"/>
                             <constraint firstItem="yfp-i0-eMP" firstAttribute="top" secondItem="e3Y-4l-TEa" secondAttribute="bottom" constant="20" id="rqT-fq-XsU"/>
-                            <constraint firstItem="2XP-EK-fK7" firstAttribute="trailing" secondItem="icg-px-bPn" secondAttribute="trailing" constant="10" id="ta4-tl-dzU"/>
-                            <constraint firstItem="icg-px-bPn" firstAttribute="top" secondItem="e3Y-4l-TEa" secondAttribute="bottom" constant="300" id="y4j-cY-U1V"/>
                             <constraint firstItem="SVq-wV-hiC" firstAttribute="leading" secondItem="2XP-EK-fK7" secondAttribute="leading" id="yah-Ft-WaH"/>
+                            <constraint firstItem="oMM-Ll-Lf6" firstAttribute="top" secondItem="yfp-i0-eMP" secondAttribute="bottom" constant="20" id="ydl-Gt-7mh"/>
                         </constraints>
                     </view>
                     <connections>
